--- a/about.qmd
+++ b/about.qmd
@@ -5,8 +5,8 @@ about:
   #image: profile.jpg
   links:
     - icon: twitter
-      text: Projects
-      href: p1.qmd
+      text: Twitter
+      href: https://twitter.com
     - icon: github
       text: Github
       href: https://github.com
