--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,7 @@
 ---
-title: "**Expected Goals Model**"
+title: ""
+about:
+  template: jolla
+  #image: profile.jpg
 ---
-
-This is a Quarto website. Would you like to come here ?
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-I would like to tell my story but where should I start ? This is important for me
-to understand how to communicate several problems ?
+Welcome
