update website font

--- a/computations.ipynb
+++ b/computations.ipynb
@@ -27,6 +27,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22cf2196",
+   "metadata": {},
+   "source": [
+    "This is an implementation of `np.arange` function in such a fundamental course. Theoretically we can talk about many hours, however, we have to realize that this is more than just a talk. Numpy is everything for us and have embrace it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "333178f2-6bbc-48d6-99f4-4e4f6ab020f9",
