--- a/about.qmd
+++ b/about.qmd
@@ -4,11 +4,16 @@ about:
   template: jolla
   #image: profile.jpg
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/farid-musayev-5934b514b/
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/faridmusayev
 ---
-About this wonderful site
+I am the 2nd Year Master's Student in Statistics and Machine Learning
+at Linköping University.
+
+I am interested in:
+
+statistical data analysis, machine learning and data visualization.
