--- a/gibbs_plot.qmd
+++ b/gibbs_plot.qmd
@@ -9,3 +9,12 @@ execute:
   eval: false
 ---
 
+```{r}
+#| eval: false
+#| label: load-packages
+#| include: false
+
+library(tidyverse)
+library(palmerpenguins)
+library(jsonlite)
+```
