text grammar updates

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -32,7 +32,7 @@
    "id": "268a2906",
    "metadata": {},
    "source": [
-    "In addition to pandas, the following packages need to be imported."
+    "In addition to pandas, the following packages need to be imported:"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "id": "b8c6cf5d",
    "metadata": {},
    "source": [
-    "To extract data from Statsbomb API, different methodologies are present. I prefer to work with [`socceraction`](https://socceraction.readthedocs.io/en/latest/#) library that allows me to extract data in a convenient `pandas.DataFrame` format."
+    "To extract data from Statsbomb API, different methodologies are available. I prefer to work with [`socceraction`](https://socceraction.readthedocs.io/en/latest/#) library that allows me to extract data in a convenient `pandas.DataFrame` format."
    ]
   },
   {
@@ -203,7 +203,7 @@
    "id": "aba833fb",
    "metadata": {},
    "source": [
-    "As it can be seen, data is available for four different female soccer competitions. Three seasons of **FA Women's Super League**, one season of **NWSL** and two competitions involving national teams, **UEFA Women's Euro 2022** and **Women's World Cup 2019**."
+    "As can be seen, data is available for four different female soccer competitions. Three seasons of **FA Women's Super League**, one season of **NWSL** and two competitions involving national teams, **UEFA Women's Euro 2022** and **Women's World Cup 2019**."
    ]
   },
   {
@@ -211,7 +211,7 @@
    "id": "112398f6",
    "metadata": {},
    "source": [
-    "Below code illustrates steps required to read each game from aforementioned competitions and save them as `.csv` files. I also save all `.csv` files into a single `all_events` dataframe. Later, this will allow me to extract an event of interest from all games at once."
+    "Below code illustrates steps required to read event data on each game from the aforementioned competitions and save it as `.csv` file. I also save all `.csv` files into a single `all_events` dataframe. Later, this will allow me to extract an event of interest from all games at once."
    ]
   },
   {
@@ -249,7 +249,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "e2d09e96",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -418,10 +420,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cc80a3e",
+   "id": "ad9731c0",
    "metadata": {},
    "source": [
-    "There is a wide range of data describing each event. Since xG model evaluates probability of a shot resulting into a goal, I can filter only `shot` events, extract columns of interest to this event and test those columns after preprocessing in the model building phase."
+    "There is a wide range of data describing each event. Since xG model evaluates the probability of a shot to result in a goal, I can filter only `shot` events, extract columns of interest to this event and test these columns after preprocessing in the model building phase."
    ]
   },
   {
@@ -472,7 +474,7 @@
    "id": "a01bfccf",
    "metadata": {},
    "source": [
-    "The following features are left out due to their irrelevance with the context of the model: *'game_id', 'event_id', 'period_id', 'team_id', 'player_id', 'type_id', 'index', 'timestamp', 'minute', 'second', 'possession', 'possession_team_id', 'possession_team_name', 'play_pattern_id', 'duration', 'related_events', 'position_id'*."
+    "The following columns are dropped due to their irrelevance to the context of the model: *'game_id', 'event_id', 'period_id', 'team_id', 'player_id', 'type_id', 'index', 'timestamp', 'minute', 'second', 'possession', 'possession_team_id', 'possession_team_name', 'play_pattern_id', 'duration', 'related_events', 'position_id'*."
    ]
   },
   {
@@ -480,7 +482,7 @@
    "id": "eb1be7da",
    "metadata": {},
    "source": [
-    "As you can see the majority of these events are `id` identifiers. For example, `play_pattern_id` is ommited while `play_pattern` is left in the dataframe. The rest of columns include time or possession related information which will not make any use in our case."
+    "As you can see, a majority of these events are `id` identifiers. For example, `play_pattern_id` is ommited while `play_pattern` is left in the dataframe. The rest of the columns include time- or possession-related information which will not make any use in our case."
    ]
   },
   {
@@ -488,7 +490,7 @@
    "id": "5c410b4d",
    "metadata": {},
    "source": [
-    "One of the most important columns, as we will later see, is the `location` of the shot. I extract required (x, y) coordinates from a given list and save them as separate columns for a simpler use case during featuring engineering phase."
+    "One of the most important columns, as we will see later, is `location` of the shot. I extract required (x, y) coordinates from a given list and save them as separate columns for a simpler use case during feature engineering phase."
    ]
   },
   {
@@ -496,7 +498,7 @@
    "id": "7988b156",
    "metadata": {},
    "source": [
-    "It is important to note that when dataframes are saved as `.csv` files, all of them are converted into a raw string format. Thus, when reading those dataframes, one needs to convert columns containing specific datatypes into python readable format. For that, I use `ast` package and, specifically, `ast.literal_eval()` function. This allows me to convert a string of a list into python readable list object. "
+    "It is important to note that when dataframes are saved as `.csv` files, all of them are converted into a raw string format. Thus, when reading these dataframes, one needs to convert columns containing specific datatypes into a python readable format. For that, I use `ast` package and, specifically, `ast.literal_eval()` function. This allows me to convert a string of a list into a python readable list object. "
    ]
   },
   {
@@ -661,12 +663,12 @@
    "id": "e2021716",
    "metadata": {},
    "source": [
-    "There is `extra` named column that contains additional information describing `shot` event. This is where we can observe that Statsbomb provides a high level of event data granularity. For example, below you can see that for each shot, the location of all players, specifically opposing team's goalkeeper, within a visible video frame is recorded. In addition, there is data about `body_part` with which shot was implemented, available `technique` (which as per event data description guide is \"name of the technique used for this shot\"), `open_goal` variable which is a boolean that describes if a shot was taken with an open goal, and `follows_dribble` boolean variable that describes if a taken shot was followed by dribble or not, `first_time` boolean variable that describes if a shot was taken with the first touch or not. Due to vendor specifications, only boolean variables with `True` state appear in `extra` column, thus, I have to specify `False` state for all other cases explicitly."
+    "The column named `extra` contains additional information describing `shot` event. This is where we can observe that Statsbomb provides a high level of event data granularity. For example, below you can see that for each shot, the location of all players, specifically opposing team's goalkeeper, within a visible video frame is recorded. In addition, there is data about `body_part` with which a shot was implemented, `technique` (which as per event data description guide is \"name of the technique used for this shot\"), `open_goal` which is a boolean variable that describes if a shot was taken with an open goal, `follows_dribble` which is a boolean variable that describes if a taken shot was followed by dribble or not and `first_time` which is a boolean variable that describes if a shot was taken with the first touch or not. Due to vendor specifications, only boolean variables with `True` state appear in `extra` column; thus, I have to specify `False` state for all other cases explicitly."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a76d6f7",
+   "id": "380e9719",
    "metadata": {},
    "source": [
     "As you can see, variables `follows_dribble` and `open_goal` are missing from below instance of `extra` column due to `False` state."
@@ -675,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "49cc89ba",
+   "id": "318e78e2",
    "metadata": {},
    "outputs": [
     {
@@ -746,10 +748,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1054aa38",
+   "id": "35b17432",
    "metadata": {},
    "source": [
-    "In addition to above mentioned data, I also extract contenxtual information from `extra` column. These are `type`, `statsbomb_xg` and `outcome` variables. The last one is important for knowing if a taken shot results into a goal or not. `type` will help me to filter out only open play situations, and discard outlying conditions where a shot is taken directly from corner, free-kick, penalty or kick-off. These are situations which can largely skew performance of existent xG Model, and it is better to build a separate model that focuses only on those conditions."
+    "In addition to above-mentioned data, I also extract contenxtual information from `extra` column. These are `type`, `statsbomb_xg` and `outcome` variables. The last one is important for knowing if a taken shot results in a goal or not. The variable `type` will help me to filter out only open play situations and discard outlying conditions where a shot is taken directly from corner, free-kick, penalty or kick-off. These are situations that can largely skew performance of the proposed xG model, and it is better to build a separate model that focuses only on them."
    ]
   },
   {
@@ -1003,16 +1005,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c77d7e2d",
+   "id": "40066c9c",
    "metadata": {},
    "source": [
-    "Also, I would like to extract opposing team's goalkeeper location during each executed shot. These coordinates are present in `freeze_frame` column."
+    "Also, I would like to extract opposing team's goalkeeper location during each executed shot. These coordinates are contained in `freeze_frame` column."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1e6b19de",
+   "id": "13e9835a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,10 +1056,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53f635a9",
+   "id": "65db938a",
    "metadata": {},
    "source": [
-    "This is the end of preprocessing stage for data that will be used in xG model. Now, we can move on to model building phase which will include exploratory data analysis, feature engineering and model selection."
+    "This is the end of preprocessing stage for data that will be used in the proposed xG model. Now, we can move on to the model building phase that will focus on exploratory data analysis, feature engineering and model selection."
    ]
   }
  ],
