--- a/p1.qmd
+++ b/p1.qmd
@@ -5,13 +5,13 @@ title: "Expected Goals Model"
 
 ## Summary
 
-Soccer is a low scoring game. Thus, it appears hard to evaluate performance of teams
-looking only at the number of scored and conceded goals. In comparison to goals,
-teams usually execute a much higher number of shots. However, not all of those shots
+Soccer is a low-scoring game. Thus, it appears difficult to evaluate performance of teams
+by looking only at the number of scored and conceded goals. In comparison to goals,
+teams usually execute a much higher number of shots. However, not all of these shots
 are of the same quality. In other words, different shots may have different probabilities
 of being scored. These probabilities may depend on many different parameters. In this
-project, I would to implement Expected Goals Model that computes how likely is a given shot
-to result into a goal.
+project, I implement Expected Goals Model that computes how likely is a given shot
+to result in a goal.
 
 Project repository is available [here](https://github.com/faridmusayev/Expected_Goals_Model/tree/main/statsbomb).
 
@@ -21,12 +21,12 @@ The project consists of the following parts:
 
 * [Part 1 | Data Preprocessing](data_preprocessing.ipynb)
 
-  In this section, I demonstrate how to extract data from external resource,
+  In this section, I demonstrate how to extract data from an external resource,
   filter out only required competitions, specify the columns of interest and
-  bring them into desirable format.
+  bring them into a desirable format.
 
 * [Part 2 | Building Model](building_model.ipynb)
 
   This part mainly focuses on the exploratory data analysis, design of new
-  features and statistical analysis of existing ones, splitting and transforming
+  features, statistical analysis of existing features, splitting and transforming
   data, hyperparameter tuning and model selection.
