--- a/p2.qmd
+++ b/p2.qmd
@@ -10,7 +10,7 @@ In this visualization,
  I make a gridplot of xG values conceded and scored by each team against all other teams
  in Allsvenskan (Swedish Top Football League)
 during season 2021. Since this is a gridplot, one can obtain only a general
-performance overview for each of the teams. This gridplot was
+performance overview for each team. This gridplot was
 designed using object-oriented plotting in [`matplotlib`](https://matplotlib.org/).
 
 Code is available [here.](xG_for_against_subplots.ipynb)
@@ -22,24 +22,23 @@ please follow this [link.](https://raw.githubusercontent.com/faridmusayev/Swedis
 
 ## Gibbs Sampling Convergence
 This is a visualization of two parameters, variance and mean, which
-were simulated from their respective conditional posterior distributions until convergence. The upper
+were sampled from their respective conditional posterior distributions until convergence. The upper
 plots show the trajectories of sampled Markov Chains. The lower plots show the number of iterations
 required to reach convergence for each parameter. This plot was designed using [`ggplot2`](https://ggplot2.tidyverse.org/).
 
 Code is available [here.](https://github.com/faridmusayev/data_visualization/blob/main/gibbs/gibb_sampling.R)
 
-This plot was created in collaboration with [Kristina Levina](https://github.com/Ada-Lev/Data-Visualisation).
-
-
 ![](./gibbs_sampling.svg)
+
+This plot was created in collaboration with [Kristina Levina](https://github.com/Ada-Lev/Data-Visualisation).
 
 ## MCMC Convergence of Parameters
 In this visualization, MCMC algorithm is used to draw parameters of Poisson regression
-from multivariate posterior distribution. After approximately 250 iterations, parameters
+from a multivariate posterior distribution. After approximately 250 iterations, the parameters
 start to converge. This plot was designed using [`ggplot2`](https://ggplot2.tidyverse.org/).
 
 Code is available [here.](https://github.com/faridmusayev/data_visualization/blob/main/mcmc/MCMC.R)
 
-
 ![](./mcmc.svg)
+
 This plot was created in collaboration with [Kristina Levina](https://github.com/Ada-Lev/Data-Visualisation).
