--- a/index.qmd
+++ b/index.qmd
@@ -5,4 +5,4 @@ about:
   #image: profile.jpg
 ---
 
-[Expected Goals Model](p1.qmd)  |  [Data Visualization](p2.qmd)
+[Expected Goals Model](p1.qmd)  |  [Scientific Visualization](p3.qmd)  |  [Soccer Analytics](p2.qmd)
