--- a/p3.qmd
+++ b/p3.qmd
@@ -2,19 +2,28 @@
 title: "Scientific Visualization"
 ---
 
-## Gibbs Sampling Convergence
+### Approximation of sin(x) function with Gaussian Kernel
+In this visualization, Gaussian Kernel model is implemented to approximate values of a
+given  function sin(x). In other words, for a given range of x values, Gaussian Kernel model
+allows to predict values of sin(x). It can be oberved that approximated and  sin(x)
+values are very close to each other. This plot was designed using [`ggplot2`](https://ggplot2.tidyverse.org/).
+
+![](./kernel_sin.svg)
+
+
+### Gibbs Sampling Convergence
 This is a visualization of two parameters, variance and mean, which
 were sampled from their respective conditional posterior distributions until convergence. The upper
 plots show the trajectories of sampled Markov Chains. The lower plots show the number of iterations
 required to reach convergence for each parameter. This plot was designed using [`ggplot2`](https://ggplot2.tidyverse.org/).
 
-Code is available [here.](https://github.com/faridmusayev/data_visualization/blob/main/gibbs/gibb_sampling.R).
+Code is available [here.](https://github.com/faridmusayev/data_visualization/blob/main/gibbs/gibb_sampling.R)
 
 ![](./gibbs_sampling.svg)
 
 This plot was created in collaboration with [Kristina Levina](https://github.com/Ada-Lev/Data-Visualisation).
 
-## MCMC Convergence of Parameters
+### MCMC Convergence of Parameters
 In this visualization, Markov chain Monte Carlo (MCMC) algorithm is used to draw parameters of Poisson regression
 from a multivariate posterior distribution. After approximately 250 iterations, the parameters
 start to converge. This plot was designed using [`ggplot2`](https://ggplot2.tidyverse.org/).
